# nihongo_dep

./: .gitignore  README.md  env-dev.yml  pyproject.toml
data/raw/: .gitignore
data/raw/UD_Japanese-GSD/: .gitignore
nihongo_dep/: __main__.py  api.py  conll.py  ginza.py  tree.py
notebooks/: UD.ipynb  ginza.ipynb  hf-upos.ipynb  tatoeba.ipynb
scripts/: bzip.sh
