[tool.poetry]
name = "nihongo-dep"
version = "0.1.0"
description = "A tool for exploring japanese sentences."
authors = ["Zack Drescher <zackryandrescher@gmail.com>"]
readme = "README.md"
packages = [{include = "nihongo_dep"}]

[tool.poetry.dependencies]
python = "^3.9"
pyconll = "^3.1.0"
pandas = "^1.5.3"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.20.2"
black = {version = "^23.1a1", allow-prereleases = true}
jupyter = "^1.0.0"
notebook = "^6.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
